# viwslam

./: .gitignore  CMakeLists.txt  README.md
app/: run_viwslam.cc
config/kaist/: kaist_cam0_viwo_38-39.yaml
src/camera/: Camera.h  CameraFactory.cc  CameraFactory.h  PinholeCamera.cc  PinholeCamera.h
src/estimator/: estimator.cc  estimator.h  feature_manager.cc  feature_manager.h  parameters.cc  parameters.h
src/factor/: angle_local_parameterization.h  four_dof_factor.h  four_dof_weight_factor.h  imu_encoder_factor.cc  imu_encoder_factor.h  integration_base.cc  integration_base.h  marginalization_factor.cc  marginalization_factor.h  pose_local_parameterization.cc  pose_local_parameterization.h  projectionTwoFrameOneCamFactor.cc  projectionTwoFrameOneCamFactor.h
src/featureTracker/: feature_tracker.cc  feature_tracker.h
src/initial/: initial_aligment.cc  initial_alignment.h  initial_ex_rotation.cc  initial_ex_rotation.h  initial_sfm.cc  initial_sfm.h  solve_5pts.cc  solve_5pts.h
src/loop_fusion/: keyframe.cc  keyframe.h  pose_graph.cc  pose_graph.h
src/utility/: basetype.h  tic_toc.h  utility.cc  utility.h  utility_2.h
src/viewer/: viewer.cc  viewer.h
